oshk/hkoscon-blob/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hkoscon-blob
  labels:
    app: minio
    account: hkoscon
    owner: hkoscon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
      account: hkoscon
      owner: hkoscon
  template:
    metadata:
      labels:
        app: minio
        account: hkoscon
        owner: hkoscon
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2018-02-09T22-40-05Z
          commands:
          args:
            - gateway
            - azure
          ports:
            - containerPort: 9000
