oshk/hkoscon-blob/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hkoscon-blob
  labels:
    app: minio
    account: hkoscon
    owner: hkoscon
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    account: hkoscon
    owner: hkoscon
  type: ClusterIP
