oshk/hkoscon-blob/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hkoscon-blob
  labels:
    app: minio
    account: hkoscon
    owner: hkoscon
spec:
  rules:
  - host: upload.hkoscon.org
    http:
      paths:
      - backend:
          serviceName: hkoscon-blob
          servicePort: 9000
        path: /
  - host: hkoscon-blob.tonyhhyip.me
    http:
      paths:
      - backend:
          serviceName: hkoscon-blob
          servicePort: 9000
        path: /
